refactor(docs): 删除DDD经典分层架构的详细文档文件
- 移除了1、DDD 经典分层架构目录结构.md文档
- 文档内容包括单体工程和微服务目录结构示例
- 包含DDD四层架构原则与依赖规则详细说明
- 涉及聚合、实体和值对象的核心概念介绍
- 清理过期或不再维护的设计文档内容